--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
       </span>
     </span>
   </div>
-  <img
-    class="deepfake-ethique-removebg-preview-1"
-    src="Pictures/deepfake-ethique-removebg-preview-10.png"
-  />
+  <img class="homepage-ashby-1" src="homepage-ashby-10.png"  />
   <img class="rectangle-12" src="Pictures/rectangle-120.svg" />
   <div class="rectangle-26"></div>
   <div class="how-it-started">How It Started</div>
@@ -130,7 +127,7 @@
     the technology to where it is now. (Regan, 2024).
     <br />
   </div>
-  <img class="image-5" src="Pictures/image-50.png" />
+  <img class="homepage-gio-1" src="homepage-gio-10.png" />
   <div class="line-24"></div>
   <div
     class="deepfake-technology-uses-machine-learning-particularly-generative-adversarial-networks-ga-ns-to-create-fake-but-realistic-videos-or-images-the-process-begins-by-training-a-model-with-large-amounts-of-data-such-as-pictures-or-videos-of-a-person-this-helps-the-model-learn-the-person-s-facial-features-expressions-and-movements-once-trained-the-model-can-replace-someone-s-face-in-a-video-or-change-their-expressions-creating-a-new-synthetic-version-of-the-video-yu-et-al-2021-these-deepfake-videos-often-look-very-real-but-they-might-have-subtle-flaws-for-example-the-face-may-not-match-the-body-perfectly-or-there-could-be-unnatural-movements-these-signs-can-sometimes-help-identify-deepfakes-although-the-technology-has-improved-so-much-that-it-s-becoming-harder-to-spot-them-despite-these-advancements-inconsistencies-in-how-the-face-moves-or-interacts-with-the-rest-of-the-body-can-still-give-deepfakes-away-yu-et-al-2021"
@@ -154,8 +151,7 @@
     <br />
   </div>
   <div class="how-it-is-made">How It Is Made</div>
-  <img class="image-10" src="Pictures/image-100.png" />
-  <img class="image-11" src="Pictures/image-110.png" />
+  <img class="homepage-carlo-1" src="homepage-carlo-10.png" />
   <div class="ellipse-3"></div>
   <div class="ellipse-4"></div>
   <div class="ellipse-5"></div>
@@ -286,31 +282,6 @@
     worried? ENTERPRISE.
     https://unisa.edu.au/connect/enterprise-magazine/articles/2024/what-are-deepfakes-and-should-we-be-worried/ 
   </a>
-
-  <a href="https://www.wired.com/story/these-new-tricks-can-outsmart-deepfake-videosfor-now/" class="Scoles" style="color: #06172f80" target="_blank
-    ">PHOTO SOURCE: Scoles, S. (2018, October 17). These new tricks can outsmart
-    deepfake videos—for now. WIRED.
-    <br />
-    https://www.wired.com/story/these-new-tricks-can-outsmart-deepfake-videosfor-now/
-    <br /> ALYSSA FOOTE; OLIVIER DOULIERY/GETTY IMAGES
-  </a>
-<a
-  href= "https://www.timeforkids.com/g56/fakeout-2/" class="Phan"
->
-  PHOTO SOURCE: Phan, K. (2021, May 7). Fakeout. TIMEforKIDS.
-  https://www.timeforkids.com/g56/fakeout-2/
-
-  <br /> DAVID PAUL MORRIS—BLOOMBERG/GETTY IMAGES. PHOTO ILLUSTRATION BY STEPHEN BLUE FOR TIME FOR KIDS
-</a>
-<a
-  href= "https://www.theverge.com/2021/3/5/22314980/tom-cruise-deepfake-tiktok-videos-ai-impersonator-chris-ume-miles-fisher" class="Vincent" style="color: #06172f80" target="_blank"
->
-  PHOTO SOURCE: Vincent, J. (2021, March 5). Tom Cruise deepfake creator says
-  public shouldn’t be worried about ‘one-click fakes.’ The Verge.
-  https://www.theverge.com/2021/3/5/22314980/tom-cruise-deepfake-tiktok-videos-ai-impersonator-chris-ume-miles-fisher
-  <br />
-  Want to see a magic trick? Tom Cruise impersonator Miles Fisher (left) and the deepfake Tom Cruise created by Chris Ume (right). Image: Chris Ume
-</a>
 </div>
 </div>
 </body>
