--- a/ThreatsTabs.html
+++ b/ThreatsTabs.html
@@ -121,10 +121,7 @@
     </div>
     <img class="rectangle-33" src="Pictures/rectangle-330.svg" />
     <img class="rectangle-35" src="Pictures/rectangle-350.svg" />
-    <img
-      class="deep-fake-blog-01-3-x-1024-x-585-removebg-preview-1"
-      src="Pictures/deep-fake-blog-01-3-x-1024-x-585-removebg-preview-10.png"
-    />
+    <img class="recommendations-yana-1" src="recommendations-yana-10.png" />
     <div class="recommendations">Recommendations</div>
     <div class="long-term-recommendations">Long-Term Recommendations</div>
     <div
@@ -598,13 +595,6 @@
     PHOTO SOURCE: Flashpoint Intel Team. (2023, September 28). What is Deepfake
     Technology and How Are Threat Actors Using It? Flashpoint.
     https://flashpoint.io/blog/what-is-deepfake-technology/
-  </a>
-  <a
-    href= "https://en.facephi.com/blog/protect-your-company-from-deepfakes/" class="Face" style="color:#ffffff80" target="_blank"
-  >
-    PHOTO SOURCE: Facephi. (2024, October 29). How to protect your company from
-    deepfakes and other digital frauds.
-    https://en.facephi.com/blog/protect-your-company-from-deepfakes/
   </a>
 </div>
 </body>
