--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="wrapper">
 
 <div class="landing-tab">
-  <img class="image-9" src="Pictures/image-90.png" />
+  <img class="homebg" src="homebg0.png" />
   <div class="what-is">WHAT IS</div>
   <div class="deepfake">DEEPFAKE?</div>
   <div
@@ -205,7 +205,6 @@
     </a>
     <br />
   </div>
-  <img class="rectangle-18" src="Pictures/rectangle-180.svg" />
   <div class="the-world-of-deepfake">The World of Deepfake</div>
   <img class="defaketicon-tab-1" src="Pictures/defaketicon-tab-10.png" />
   <div class="line-31"></div>
@@ -274,14 +273,7 @@
         class="source-vaccari-chadwick-2020-https-journals-sagepub-com-doi-10-1177-2056305120903408-bibr-18-2056305120903408-downs-1957-also-cited-in-vaccari-chadwick-2020-span3"
       ></span>
     </span>
-    <a
-    class="Gibson"
-    href="https://unisa.edu.au/connect/enterprise-magazine/articles/2024/what-are-deepfakes-and-should-we-be-worried/" style="color: #ffffff80" target="_blank"
-  
-    >PHOTO SOURCE: Gibson, C. (2024, May 22). What are deepfakes and should we be
-    worried? ENTERPRISE.
-    https://unisa.edu.au/connect/enterprise-magazine/articles/2024/what-are-deepfakes-and-should-we-be-worried/ 
-  </a>
+    
 </div>
 </div>
 </body>
