--- a/ThreatsTabs.html
+++ b/ThreatsTabs.html
@@ -574,7 +574,7 @@
       the same rate the technology evolves.
     </div>
     <img class="rectangle-18" src="Pictures/rectangle-180.svg" />
-    <img class="image-27" src="Pictures/image-270.svg" />
+    <img class="threats-tab-background-1" src="Threats tab background.png" />
     <div class="summary">Summary</div>
     <div class="line-36"></div>
     <img class="image-26" src="Pictures/image-260.png" />
@@ -589,13 +589,6 @@
     <div class="the-threats-of-deepfake">The Threats of Deepfake</div>
     <div class="_3">3.</div>
     <div class="_4">4.</div>
-  <a
-    href= "https://flashpoint.io/blog/what-is-deepfake-technology/" class="Intel" style=color:#ffffff80 target="_blank"
-  >
-    PHOTO SOURCE: Flashpoint Intel Team. (2023, September 28). What is Deepfake
-    Technology and How Are Threat Actors Using It? Flashpoint.
-    https://flashpoint.io/blog/what-is-deepfake-technology/
-  </a>
 </div>
 </body>
 </html>
